<resources>
    <string name="title_activity_main">transferr-pass</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="sales">sales</string>
    <string name="comments">comments</string>
    <string name="tours">tours</string>
    <string name="exit">Exit</string>
    <string name="driversNear">Car next to you</string>
    <string name="chooseState">Escolha o Estado:</string>
    <string name="chooseLocation">Choose Location:</string>
    <string name="seeDrivers">see drivers</string>
    <string name="chooseCountry">Your Country:</string>
    <string name="wait">Wait</string>
    <string name="loading">Loading</string>
    <string name="home">Home</string>
    <string name="nav_agenda">Agenda</string>
    <string name="historic">Historic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whereToGo">Where to go?</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="drivers">Drivers</string>
    <string name="plans">plans</string>
    <string name="empty">empty</string>
    <string name="seatsRemaining">Seats remaining</string>
    <string name="seeMorePlainTourOption">More tour options</string>
    <string name="callPhone">Call</string>
    <string name="talk">Talk</string>
    <string name="needPermission">Permission Required</string>
    <string name="permissionToAccessLocation">We need to access your location to show you the best drivers next to you!</string>
    <string name="map">map</string>
    <string name="tour">tour</string>
    <string name="clickOnSearchBeside">Click on the search icon bellow to filter.</string>
    <string name="noResultFound">No result found!</string>
    <string name="seeTours">See Tours</string>
    <string name="local">Local</string>
    <string name="localAndTours"><![CDATA[Places & Tours]]></string>
    <!--Pages title -->
    <string name="page_title_map">Map</string>
    <string name="page_title_tour">Tour</string>
    <string name="page_title_menu">Menu</string>
    <string name="searchByDescription">Search by location</string>
    <string name="driverAppName">Driver</string>
    <string name="myInformation">My Information</string>
    <string name="seats">Seats</string>
    <string name="capacity">Capacity</string>
    <string name="btnSave">Save</string>
    <string name="name">Name</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="seeMap">See Map</string>
    <string name="plainTour">Plan Tuor</string>
    <string name="youAreOffLine">You\'re OFF-LINE</string>
    <string name="edit">Edit</string>
    <string name="changePassword">Change Password</string>
    <string name="place">Place</string>
    <string name="places">Places</string>
    <string name="about">About</string>
    <string name="contactUs">Contact us</string>
    <string name="rateApp">Rate the App</string>
    <string name="termsOfUse">Terms of use</string>
    <string name="menu">Menu</string>
    <string name="model">Model</string>
    <string name="plate">Plate</string>
    <string name="color">Color</string>
    <string name="noInfor">No Information</string>
    <string name="online">ON-LINE</string>
    <string name="offline">OFF-LINE</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="busySeats">Busy Seats:</string>
    <string name="searchingPassenger">Searching Passenger</string>
    <string name="searchPassengerWorks">With this option selected, passengers will find that there are scheduled tours with the remaining seats and will contact you.</string>
    <string name="passengerNotes">Passengers Notes</string>
    <string name="passengerOne">Passenger One</string>
    <string name="addPlanTour">Add Plan Tour</string>
    <string name="passengerTwo">Passenger Two</string>
    <string name="passengerThree">Passenger Three</string>
    <string name="Notes">Notes</string>
    <string name="Delete">Delete</string>
    <string name="selectADate">Select a date</string>
    <string name="Tour">Tour</string>
    <string name="date">Date</string>
    <string name="hour">hora</string>
    <string name="Phone">Phone</string>
    <string name="noteDetail">Enter here information about this passenger. Write observations,place of embarkation or any kind of information you wish to keep on the passenger.</string>
    <string name="dateTour">Tour Date</string>
    <string name="timeTour">Tour Time</string>
    <string name="msgValidationTitle">Validation</string>
    <string name="noPlanTourToSave">No Plan Tour to save or update!</string>
    <string name="pleaseInformDate">Please inform the date</string>
    <string name="pleaseInformTime">Please inform the time!</string>
    <string name="pleaseSelectATour">Please select a tour.</string>
    <string name="Advice">Advice!</string>
    <string name="dataSavedSuccessfully">Saved Successfully!</string>
    <string name="SystemFailure">So Sorry! System Failure.</string>
    <string name="getTheDriver">Getting the Driver</string>
    <string name="pleaseWaitWhileWeGetTheCar">Please Wait! Retreiving the Driver.</string>
    <string name="successDeleted">Deleted Successfully</string>
    <string name="failure">Faileru</string>
    <string name="Map">Map</string>
    <string name="alwaysParameterDescription">*When this option is checked, you will appear on the map between 7:00 am and 5:00 pm even though you are offline.</string>
    <string name="turnAlwaysParamOff">Turning this parameter off you\'ll don\'t apear automatically on the map.</string>
    <string name="noTourOptionYet">You don\'t have any plan registered yet.</string>
    <string name="emailSubject">Contact-us</string>
    <string name="emailBody">Hello everybody!</string>
    <string name="emailTitle">Contact-us</string>
    <string name="title_activity_terms_of_use">TermsOfUseActivity</string>
    <string name="termsOfUseTitle">Terms of Use</string>
    <string name="title_activity_map_info_window">MapInfoWindowActivity</string>
    <string name="logout">Logout</string>
    <string name="areYouSureLogout">Are you sure to Logout?</string>
    <string name="alwaysParamIsTrueMessage">The parameter that make the car always on map is True, so your car will still on map.</string>
    <string name="selectATime">Select a Time</string>
    <string name="noPlainTourAtThisMoment">No Plans Tour at this moment.</string>
    <string name="noDriverAtThisMoment">No Driver at this moment</string>
    <string name="permissionGranted">Permission Granted</string>
    <string name="permissionDied">Permission Died</string>
    <string name="enableLocation">Enable Location</string>
    <string name="needEnableLocation">We need to turn on GPS. Please activate it.</string>
    <string name="enableGPS">Enable GPS</string>
    <string name="cancel">Cancel</string>
    <string name="unableToFindApp">Unable to find market app</string>
    <string name="appRateText">Please help us improve our app by sending your rate.</string>
    <string name="driver">Driver</string>
    <string name="noDriverAtThisMomentDetail">Speak directly with a driver to make your ride!</string>
    <string name="noPlainTourAtThisMomentDetail">Speak directly with a driver to make your ride!</string>
    <string name="car">Car</string>
    <string name="stayOnline">Stay online during business hours:</string>
    <string name="howToSavePhoto">To change the photo just click it and choose one of the options presented. The photo will be saved automatically.</string>
    <string name="updated">Updated</string>
    <string name="carSeatLimit">exceeds the maximum capacity of the vehicle.</string>
    <string name="cantGetFileImage">Cannot get the image file.</string>
    <string name="soldOff">Sold off</string>
    <string name="noInternetConnection">No internet connection</string>
    <string name="gettingTheCar">Getting the Car</string>
    <string name="connectionFailed">No connection. Check if your internet is ok!</string>
    <string name="errorSystem">System error</string>
    <string name="errorExecutTheFunction">Error on execute the function.</string>
    <string name="errorServerNotResponding">Server is not responding.</string>
    <string name="recoveringPassWord">Recovering password.</string>
    <string name="checkYourWifiConnection">Please check your internet connection and try again.</string>
    <string name="tryAgain">Try again</string>
    <string name="wannaGetIn">I want to sign up!</string>
    <string name="dontForgotToSayAboutUs">Please do not forget to inform the driver that you got the contact at BOORA</string>
    <string name="workshop">Oficinas</string>
    <string name="autoparts">Auto Parts</string>
    <string name="insurance">Insurance</string>
    <string name="feeding">Feeding</string>
    <string name="covenants">Covenants</string>
    <string name="forBetterExperience">For a better app experience, we suggest submitting the information below.</string>
    <string name="send">Send</string>
    <string name="notNow">Not now</string>
    <string name="email">Email</string>
    <string name="ddd">DDD</string>
    <string name="pleaseTellUsYourEmail">Please enter your email address</string>
    <string name="emailSent">E-mail sent</string>
</resources>
