<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="250dp"
    android:background="@drawable/curve_shape"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/forBetterExperience"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/edtSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_margin="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >

        <EditText
            android:id="@+id/edtSendDDD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:inputType="number"
            android:layout_weight="2"
            android:hint="@string/ddd"
            />

        <EditText
            android:id="@+id/edtSendPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:inputType="number"
            android:layout_weight="5"
            android:hint="@string/Phone"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btnSend"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/curve_shape"
            android:clickable="true"
            android:text="@string/send"
            android:textColor="@color/colorPrimaryDarkClient"
            android:textStyle="bold" />
        <View
            android:layout_width="40dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnNotNow"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/curve_shape"
            android:clickable="true"
            android:text="@string/notNow"
            android:textColor="@color/colorPrimaryDarkClient"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>