<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menuHomeDriver"
        android:enabled="true"
        android:icon="@drawable/icons8_globe_30"
        android:title="@string/map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuInfoDriver"
        android:enabled="true"
        android:icon="@drawable/ic_steering_wheel"
        android:title="@string/map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuTourDriver"
        android:enabled="true"
        android:icon="@drawable/icons8_signpost_filled_30"
        android:title="@string/tour"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menuDriver"
        android:enabled="true"
        android:icon="@drawable/icons8_menu_filled_30"
        android:title="@string/historic"
        app:showAsAction="ifRoom" />


</menu>