<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/activityBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblColorValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tour"
        android:textSize="18dp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:padding="@dimen/text_padding_left"
        android:drawableLeft="@drawable/icons8_signpost_filled_30"
        android:drawablePadding="5dp"
        android:background="@drawable/shape_text_layout"
        />
    <RelativeLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:layout_toRightOf="@+id/ivProfile">
        <ImageView
            android:id="@+id/ivPlanTourLocation"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/map_marker"
            android:layout_alignTop="@+id/spNameLocation"
            android:paddingRight="5dp"
            />

        <Spinner
            android:id="@+id/spNameLocation"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ivPlanTourLocation"
            android:layout_toRightOf="@+id/ivPlanTourLocation"
            android:spinnerMode="dropdown"
            android:focusable="true"
            style="@style/spinner_style"
            />
        <ImageView
            android:id="@+id/ivPlanTourDate"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/calendar_range"
            android:layout_alignTop="@+id/edtPlanTourDate"
            android:paddingRight="5dp"
            />
        <Button
            android:id="@+id/edtPlanTourDate"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:textStyle="bold"
            android:layout_below="@+id/spNameLocation"
            android:layout_alignStart="@+id/spNameLocation"
            android:layout_alignLeft="@+id/spNameLocation"
            android:textSize="18sp"
            android:layout_marginBottom="3dp"
            android:text="@string/dateTour"
            android:background="@drawable/shape_driver_text_background"
            />

        <ImageView
            android:id="@+id/ivPlanTourTime"
            android:clickable="true"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/ic_clock"
            android:layout_alignTop="@+id/edtPlanTourTime"
            android:paddingRight="5dp"
            />
        <Button
            android:id="@+id/edtPlanTourTime"
            android:shadowColor="@android:color/transparent"
            android:layout_width="200dp"
            android:text="@string/timeTour"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:layout_below="@+id/edtPlanTourDate"
            android:layout_alignStart="@+id/edtPlanTourDate"
            android:layout_alignLeft="@+id/edtPlanTourDate"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_driver_text_background"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/lblPlanTourOccupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capacity"
        android:textSize="18dp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:padding="@dimen/text_padding_left"
        android:drawableLeft="@drawable/account_multiple"
        android:drawablePadding="5dp"
        android:background="@drawable/shape_text_layout"
        />

    <RelativeLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingLeft="8dp"
        android:layout_toRightOf="@+id/ivProfile">
        <TextView
            android:id="@+id/tvPlanTourBusySeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busySeats"
            />

        <EditText
            android:id="@+id/edtPlanTourBusySeats"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:paddingLeft="8dp"
            android:maxLength="2"
            android:background="@drawable/shape_driver_text_background"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvCarSeatsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edtPlanTourBusySeats"
            android:layout_alignBottom="@+id/edtPlanTourBusySeats"
            android:layout_alignEnd="@+id/swtPlanTourSearching"
            android:layout_alignRight="@+id/swtPlanTourSearching"
            android:text="/ 0"
            android:textSize="14sp"
            android:textStyle="bold"
            />
        <!--
        <Spinner
            android:id="@+id/spPlanTourBusySeats"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="14dp"
            style="@style/spinner_style"
            >

        </Spinner>
        -->
        <TextView
            android:id="@+id/tvPlanTourRemindSeatsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/swtPlanTourSearching"
            android:layout_alignEnd="@+id/swtPlanTourSearching"
            android:layout_alignRight="@+id/swtPlanTourSearching"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:text="0"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPlanTourRemindSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/seatsRemaining" />

        <TextView
            android:id="@+id/tvPlanTourSearching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/searchingPassenger" />

        <Switch
            android:id="@+id/swtPlanTourSearching"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvPlanTourSearching"
            android:layout_alignBottom="@+id/tvPlanTourSearching"
            android:layout_alignLeft="@+id/edtPlanTourBusySeats"
            android:layout_alignStart="@+id/edtPlanTourBusySeats" />

    </RelativeLayout>
    <TextView
        android:id="@+id/tvPlanTourSearchWorks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/searchPassengerWorks"
        />

    <TextView
        android:id="@+id/lblPlanTourPassengerDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passengerNotes"
        android:textSize="18dp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:padding="@dimen/text_padding_left"
        android:drawableLeft="@drawable/notebook"
        android:drawablePadding="5dp"
        android:background="@drawable/shape_text_layout"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passengerOne"
        android:paddingLeft="8dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="5dp"
        />

    <RelativeLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_toRightOf="@+id/ivProfile">
        <ImageView
            android:id="@+id/ivPlanTourPassengerOne"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/account_black"
            android:layout_alignTop="@+id/tvPlanTourPassengerOneName"
            android:paddingRight="5dp"
            />

        <EditText
            android:id="@+id/tvPlanTourPassengerOneName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ivPlanTourPassengerOne"
            android:layout_toRightOf="@+id/ivPlanTourPassengerOne"
            android:background="@drawable/shape_driver_text_background"
            android:hint="@string/name"
            android:maxLength="60"
            android:inputType="textPersonName"
            android:layout_marginBottom="3dp"
            />
        <ImageView
            android:id="@+id/ivPlanTourPassengerOnePhone"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/phone_plus"
            android:layout_alignTop="@+id/edtPassengerOnePhone"
            android:paddingRight="5dp"
            />
        <EditText
            android:id="@+id/edtPassengerOnePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPlanTourPassengerOneName"
            android:layout_alignStart="@+id/tvPlanTourPassengerOneName"
            android:layout_alignLeft="@+id/tvPlanTourPassengerOneName"
            android:background="@drawable/shape_driver_text_background"
            android:hint="@string/Phone"
            android:inputType="phone"
            android:layout_marginBottom="3dp"
            />


        <EditText
            android:id="@+id/edtPassengerOneNotes"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edtPassengerOnePhone"
            android:background="@drawable/shape_driver_text_background"
            android:hint="@string/noteDetail"
            android:maxLength="160"
            android:layout_marginBottom="3dp"
            android:textSize="14sp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passengerTwo"
        android:paddingLeft="8dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="5dp"
        />

    <RelativeLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_toRightOf="@+id/ivProfile">
        <ImageView
            android:id="@+id/ivPlanTourPassengerTwo"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/account_black"
            android:layout_alignTop="@+id/tvPlanTourPassengerTwoName"
            android:paddingRight="5dp"
            />

        <EditText
            android:id="@+id/tvPlanTourPassengerTwoName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ivPlanTourPassengerTwo"
            android:layout_toRightOf="@+id/ivPlanTourPassengerTwo"
            android:background="@drawable/shape_driver_text_background"
            android:hint="@string/name"
            android:maxLength="60"
            android:inputType="textPersonName"
            android:layout_marginBottom="3dp"
            />
        <ImageView
            android:id="@+id/ivPlanTourPassengerTwoPhone"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/phone_plus"
            android:layout_alignTop="@+id/edtPassengerTwoPhone"
            android:paddingRight="5dp"
            />
        <EditText
            android:id="@+id/edtPassengerTwoPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPlanTourPassengerTwoName"
            android:layout_alignStart="@+id/tvPlanTourPassengerTwoName"
            android:layout_alignLeft="@+id/tvPlanTourPassengerTwoName"
            android:background="@drawable/shape_driver_text_background"
            android:hint="@string/Phone"
            android:maxLength="12"
            android:inputType="phone"
            android:layout_marginBottom="3dp"
            />


        <EditText
            android:id="@+id/edtPassengerTwoNotes"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edtPassengerTwoPhone"
            android:background="@drawable/shape_driver_text_background"
            android:hint="@string/noteDetail"
            android:maxLength="160"
            android:layout_marginBottom="3dp"
            android:textSize="14sp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passengerThree"
        android:paddingLeft="8dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="5dp"
        />

    <RelativeLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_toRightOf="@+id/ivProfile">
        <ImageView
            android:id="@+id/ivPlanTourPassengerThree"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/account_black"
            android:layout_alignTop="@+id/tvPlanTourPassengerThreeName"
            android:paddingRight="5dp"
            />

        <EditText
            android:id="@+id/tvPlanTourPassengerThreeName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ivPlanTourPassengerThree"
            android:layout_toRightOf="@+id/ivPlanTourPassengerThree"
            android:background="@drawable/shape_driver_text_background"
            android:hint="@string/name"
            android:maxLength="60"
            android:inputType="textPersonName"
            android:layout_marginBottom="3dp"
            />
        <ImageView
            android:id="@+id/ivPlanTourPassengerThreePhone"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/phone_plus"
            android:layout_alignTop="@+id/edtPassengerThreePhone"
            android:paddingRight="5dp"
            />
        <EditText
            android:id="@+id/edtPassengerThreePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPlanTourPassengerThreeName"
            android:layout_alignStart="@+id/tvPlanTourPassengerThreeName"
            android:layout_alignLeft="@+id/tvPlanTourPassengerThreeName"
            android:background="@drawable/shape_driver_text_background"
            android:hint="@string/Phone"
            android:maxLength="60"
            android:inputType="phone"
            android:layout_marginBottom="3dp"
            />


        <EditText
            android:id="@+id/edtPassengerThreeNotes"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edtPassengerThreePhone"
            android:background="@drawable/shape_driver_text_background"
            android:hint="@string/noteDetail"
            android:maxLength="160"
            android:layout_marginBottom="3dp"
            android:textSize="14sp"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/lblPlanTourNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Notes"
        android:textSize="18dp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:padding="@dimen/text_padding_left"
        android:drawableLeft="@drawable/account_details"
        android:drawablePadding="5dp"
        android:background="@drawable/shape_text_layout"
        />
    <EditText
        android:id="@+id/edtPlanTourNotes"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/shape_driver_text_background"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="4dp"
        android:textSize="14sp"
        />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnPlanTourDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Delete"
        android:textColor="@color/redDelete"
        android:drawableLeft="@drawable/delete"
        app:backgroundTint="@color/colorPrimary" />

</LinearLayout>